[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "servo-embedding-gtk-example"
version = "0.1.0"

[dependencies]
gdk = "^0.6.0"
glib = "^0.3.1"
gtk = "^0.2.0"
shared_library = "=0.1.5"

[dependencies.epoxy]
git = "https://github.com/antoyo/epoxy-rs"

[dependencies.libservo]
git = "https://github.com/servo/servo"
rev = "6051e5ed02"

[features]
default = ["gtk/v3_16"]
